2014-03-24
==========
! BREAKING CHANGE: addEmptyRow on table has been removed. Use [table addRow:nil] instead.

2014-03-21
==========
! BREAKING CHANGE: Table findFirstRow and min/max/sum/avg operations has been hidden.
! BREAKING CHANGE: Table.appendRow has been renamed to addRow.
! BREAKING CHANGE: getOrCreateTable on Transaction has been removed.
+ createTable method added on Transaction. Throws exception if table with same name already exists.
! BREAKING CHANGE: Underscore (_) removed from generated typed table classes.
! BREAKING CHANCE: TDBBinary has been removed; use NSData instead.
! BREAKING CHANGE: Underscope (_) removed from generated typed table classes.
! BREAKING CHANCE: Constructor for TDBContext has been renamed to contextWithPersistenceToFile:

2014-03-20
==========
* [TDBQuery parent] and [TDBQuery subtable:] selectors now return self.
! BREAKING CHANCE: Header files are renamed so names match class names.

2014-03-18
==========
! BREAKING CHANGE: Typed interface Cursor has now been renamed to Row.
! BREAKING CHANGE: TDBGroup has been renamed to TDBTransaction.
+ getTableWithName selector added on group.
* getting and creating table methods on group no longer take error argument.

2014-03-17
==========
+ Added firstRow, lastRow selectors on view.
* firstRow and lastRow on table now return nil if table is empty.

2014-03-14
==========
! BREAKING CHANGE: Prepend TDB-prefix on all classes and types.

2014-03-13
==========
+ Adding setObject to TightdbTable (t[2] = @[@1, @"Hello"] is possible).

2014-03-12
==========
+ Adding insertRow to TightdbTable.

2014-03-11
==========
* Extending appendRow to accept NSDictionary.
! BREAKING CHANGE: Most selectors have been renamed in the binding!

2014-03-10
==========
* Return types and parameters changed from size_t to NSUInteger.

2014-03-07
==========
* Adding appendRow to TightdbTable.
* Adding object subscripting.
* Adding method removeColumn on table.

2014-03-05
==========