@@ -199,7 +199,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName1, CType1) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -429,7 +429,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName2, CType2) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -676,7 +676,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName3, CType3) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -940,7 +940,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName4, CType4) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -1221,7 +1221,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName5, CType5) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -1519,7 +1519,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName6, CType6) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -1834,7 +1834,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName7, CType7) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -2166,7 +2166,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName8, CType8) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -2515,7 +2515,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName9, CType9) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -2881,7 +2881,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName10, CType10) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -3264,7 +3264,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName11, CType11) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -3664,7 +3664,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName12, CType12) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -4081,7 +4081,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName13, CType13) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -4515,7 +4515,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName14, CType14) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
@@ -4966,7 +4966,7 @@ TIGHTDB_COLUMN_PROXY_IMPL(CName15, CType15) \
 } \
 -(TableName##Row*)insertEmptyRowAtIndex:(NSUInteger)ndx \
 { \
-    [super insertEmptyRowAtIndex:ndx]; \
+    [super insertRow:nil atIndex:ndx]; \
     return [[TableName##Row alloc] initWithTable:self ndx:ndx]; \
 } \
 -(TDBRow*)getRow \
